--- a/dev/_locales/ja/messages.json
+++ b/dev/_locales/ja/messages.json
@@ -7,6 +7,9 @@
     "message": "開けるタブの上限を指定し、それ以上開いた時は、古いタブから自動で閉じます。",
     "description": "ウェブストアで表示されるアプリの詳細説明"
   },
+  "title": {
+    "message": "TabLimiterでこのタブを閉じました"
+  },
   "btnMsg1": {
     "message": "タブを再度開く",
     "description": "リッチアラームに表示するボタン１のメッセージ"
